--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                       <a href=""><img src="image/hodi-no-bg.png" alt="" /></a>
                   </div>
           <h1>Give your Sales Team <em>Superpowers</em></h1>
-          <p>Hodi provides inside sales talent with fast ramp-up and clear results, so you can spend less time researching and more time selling.</p>
+          <p>Hodi provides inside sales talent with fast ramp-up and clear results, so you can spend less time cold-emailing and more time selling.</p>
           <div class="hero-btn"><a href="mailto:info@hodi.co" class="btn btn--orange btn--hover-shine">Get in Touch</a></div>
         </div>
       </div>
