--- a/d/index.html
+++ b/d/index.html
@@ -21,26 +21,17 @@
                 <div class="block">
                     <img id="hodi-logo" src="image/hodi-with-transparent-connector-no-bg-colour-4.svg" alt="Hodi Logo">
                 </div>
-            </div>
-        </div>
-        <div class="columns">
-            <div class="column is-three-quarters">
                 <h1 class="title is-1 headline-font" id="main-title">Give your sales team <span class="header-em">Superpowers</span></h1>
-            </div>
-        </div>
-        <div class="columns">
-            <div class="column">
-                <h2 class="title is-2 headline-font">Hodi provides inside sales talent with fast ramp-up and clear results, so you can spend less time cold-emailing and more time selling.</h2>
-            </div>
-        </div>
-        <div class="coliumns">
-            <div class="column">
+                <h2 class="subtitle is-3 headline-font" id="subtitle">Hodi provides inside sales talent with fast ramp-up and clear results, so you can spend less time cold-emailing and more time selling.</h2>
                 <button class="button is-large is-inverted" id="cta">Get In Touch</button>
+            </div>
+            <div class="column">
+                <img id="superhero-img" src="image/Powerful-rafiki.svg" alt="Superhero">
             </div>
         </div>
     </div>
     <div id="footer-row">
-
+        Copyright 2021 Hodi. <a href="https://storyset.com/people">Illustration by Freepik Storyset</a>
     </div>
 </body>
 
