Minor tweaks to D

--- a/d/index.html
+++ b/d/index.html
@@ -31,7 +31,7 @@
         </div>
     </div>
     <div id="footer-row">
-        Copyright 2021 Hodi. <a href="https://storyset.com/people">Illustration by Freepik Storyset</a>
+        <span>Copyright 2021 Hodi. <a href="https://storyset.com/people">Illustration by Freepik Storyset</a></span>
     </div>
 </body>
 
