--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <body>
     <div id="content">
         <div class="vertical-spacer"></div>
-        <div class="columns">
+        <div class="columns is-widescreen">
             <div class="column">
                 <div class="block">
                     <img id="hodi-logo" src="image/hodi-with-transparent-connector-no-bg-colour-1.svg" alt="Hodi Logo">
@@ -61,7 +61,7 @@
                     ramp-up and clear results, so you can spend less time cold-emailing and more time selling.</h2>
                 <button onclick="triggerChat()" class="button is-large is-inverted" id="cta">Get Started</button>
             </div>
-            <div class="column">
+            <div class="column is-hidden-touch">
                 <img id="superhero-img" src="image/Powerful-bro.svg" alt="Superhero">
             </div>
         </div>
