--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         type="text/css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Asap:wght@400;700&display=swap" rel="stylesheet">
-    <title>Hodi</title>
+    <title>Hodi - Give your sales team Superpowers</title>
     <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
@@ -26,6 +26,23 @@
     <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
     <link rel="manifest" href="/manifest.json">
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="Hodi - Give your sales team Superpowers">
+    <meta name="description" content="Professional inside sales talent. We do the research, you focus on selling">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://hodi.co/">
+    <meta property="og:title" content="Give your sales team Superpowers">
+    <meta property="og:description" content="Professional inside sales talent. We do the research, you focus on selling">
+    <meta property="og:image" content="image/hodi_open_graph">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://hodi.co/">
+    <meta property="twitter:title" content="Give your sales team Superpowers">
+    <meta property="twitter:description" content="Professional inside sales talent. We do the research, you focus on selling">
+    <meta property="twitter:image" content="image/hodi_open_graph">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
