--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
     <meta property="og:url" content="https://hodi.co/">
     <meta property="og:title" content="Give your sales team Superpowers">
     <meta property="og:description" content="Professional inside sales talent. We do the research, you focus on selling">
-    <meta property="og:image" content="image/hodi_open_graph">
+    <meta property="og:image" content="image/hodi_open_graph.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://hodi.co/">
     <meta property="twitter:title" content="Give your sales team Superpowers">
     <meta property="twitter:description" content="Professional inside sales talent. We do the research, you focus on selling">
-    <meta property="twitter:image" content="image/hodi_open_graph">
+    <meta property="twitter:image" content="image/hodi_open_graph.png">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
