Tweak to meta tags

--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://hodi.co/">
     <meta property="og:title" content="Give your sales team Superpowers">
-    <meta property="og:description" content="Professional inside sales talent. We do the research, you focus on selling">
+    <meta property="og:description" content="Professional inside sales talent, allowing you to focus on selling">
     <meta property="og:image" content="https://hodi.co/image/hodi_open_graph.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://hodi.co/">
     <meta property="twitter:title" content="Give your sales team Superpowers">
-    <meta property="twitter:description" content="Professional inside sales talent. We do the research, you focus on selling">
+    <meta property="twitter:description" content="Professional inside sales talent, allowing you to focus on selling">
     <meta property="twitter:image" content="https://hodi.co/image/hodi_open_graph.png">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
