--- a/index.html
+++ b/index.html
@@ -101,7 +101,11 @@
         </div>
     </div>
     <div id="footer-row">
-        <span>Copyright 2021 Hodi. <a href="https://storyset.com/people">Illustration by Freepik Storyset</a></span>
+        <p>
+            <a href="careers/" class="button is-small is-primary">We're hiring!</a>
+        </p>
+        <span>Copyright 2021 Hodi. <a href="https://storyset.com/people">Illustration by Freepik Storyset</a>.
+        </span>
     </div>
 </body>
 
