--- a/careers/index.html
+++ b/careers/index.html
@@ -18,15 +18,20 @@
     </style>
 </head>
 <body>
-    <div id="logo_wrap">
-
-    <img id="hodi_logo" src="image/hodi-with-transparent-connector-no-bg-colour-1.svg"/>
-    </div>
-   <!-- Recooty Widget START-->
-   <iframe id="iframe-container-1" width="100%" frameborder="0" height="300" src="https://widget.recooty.com/openings.php?key=e1d88d148c78813cc05788e945b76032"></iframe>
-   <script>
-   window.addEventListener("message",function(e){var t=e.data.split("-"),n=t[0];"iframe1"==t[1]&&(document.getElementById("iframe-container-1").style.height=n+"px")},!1);
-   </script>
-   <!-- Recooty Widget END--> 
+    <iframe src="https://www.careers-page.com/hodi" 
+    style="
+    position: fixed;
+    top: 0px;
+    bottom: 0px;
+    right: 0px;
+    width: 100%;
+    border: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    z-index: 999999;
+    height: 100%;
+  ">
+    ></iframe>
 </body>
 </html>
