Switch to airtable based hiring form

--- a/careers/index.html
+++ b/careers/index.html
@@ -1,37 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../css/bulma.css">
+    <link rel="stylesheet" href="../css/hodi.css">
+    <link href="//db.onlinewebfonts.com/c/46ff89869f85ebaa204775e329014a35?family=TextaAltW00-Light" rel="stylesheet"
+        type="text/css" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Careers at Hodi</title>
     <style>
-#logo_wrap {
+        #logo_wrap {
 
             text-align: center;
-}
+        }
+
         #hodi_logo {
             text-align: center;
-            max-width:80%;
-            padding:10px;
+            max-width: 60%;
+            padding: 10px;
+        }
+        a.button.is-primary {
+            background-color: #f6ae2d !important;
+            color: #300a31 !important;
+            margin-top:1em;
+            margin-bottom:0.5em;
         }
     </style>
 </head>
+
 <body>
-    <iframe src="https://www.careers-page.com/hodi" 
-    style="
-    position: fixed;
-    top: 0px;
-    bottom: 0px;
-    right: 0px;
-    width: 100%;
-    border: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    z-index: 999999;
-    height: 100%;
-  ">
-    ></iframe>
+    <div class="columns">
+        <div class="column" id="logo_wrap">
+            <a href="https://www.hodi.co"><img id="hodi_logo" src="image/hodi-with-transparent-connector-no-bg-colour-1.svg" /></a>
+        </div>
+    </div>
+    <div class="columns is-centered">
+        <div class="column is-three-quarters-desktop job-opening">
+            <h2 id="job-description" class="title"><strong>Sales Development Representative</strong></h2>
+            <h4 id="job-description" class="subtitle">3-month paid contract</h4>
+            <h3 id="-who-we-are-"><strong>Who we are</strong></h3>
+            <p>Hodi is a new startup offering Sales Development as a Service. We work with companies across the globe to
+                help them identify, research and communicate with potential customers. </p>
+            <h3 id="-your-role-at-hodi-"><strong>Your role at Hodi</strong></h3>
+            <p>As a Sales Development Representative (SDR), you will be part of the team providing execution of the SDR
+                work for our clients. This involves internet research, email and social platform communication with
+                potential clients.</p>
+            <h3 id="-sdr-a-building-block-for-a-diverse-range-of-career-opportunities-"><strong>SDR - A building block
+                    for a diverse range of career opportunities</strong></h3>
+            <p>As a Sales Development Representative, you will develop skills and experience which can set you up for
+                many different career paths. Within sales, SDR experience is often the foundation for future progression
+                as an Account Executive, the role where you close the deals that are identified by SDRs. Experience in
+                research and outreach within a specific industry will make you an asset to any growing company that
+                sells to similar clients. </p>
+            <p>As Hodi grows, we hope to be able to offer many of these opportunities for advancement in-house. There
+                are also a diverse range of career opportunities outside of Hodi that will be open to you based on the
+                strong research, communication and skills you will have demonstrated in your role as an SDR.</p>
+            <h3 id="-key-requirements-"><strong>Key requirements</strong></h3>
+            <ul>
+                <li>Internet-savvy: We use a lot of tech tools to deliver our service, and you will need to be
+                    comfortable learning &amp; using them</li>
+                <li>Excellent written communication: Hodi will be representing global brands and reaching out to
+                    customers around the world. It is therefore very important that our reps have a high standard of
+                    written English</li>
+                <li>Hard-working: As a full-time SDR, you will be handling communication with hundreds of clients and
+                    performing extensive internet research, every single day. Your success in your role depends on your
+                    ability to execute these responsibilities at a high level of quality throughout the work week.</li>
+                <li>Resilient: Sales is not for the faint hearted! Every day, you will receive rejections from potential
+                    customers who do not want to hear back from you. As an SDR, you will need to be comfortable facing a
+                    &#39;No&#39; every day, and adaptable to learn and improve your process from every rejection you
+                    receive.</li>
+                <li>University graduate: For Hodi to compete on a global stage, we require our SDRs to have an
+                    undergraduate degree in any field. You must have already graduated and received your certificate to
+                    qualify for a role at Hodi.</li>
+                <li>Available for full time work, 9am-5pm on Monday to Friday</li>
+                <li>Our SDRs must be based in Nairobi, Kenya, and must have a laptop through which they can work.</li>
+            </ul>
+            <h3 id="-what-we-will-do-for-you-"><strong>What we will do for you</strong></h3>
+            <ul>
+                <li>A competitive starting salary, with a transparent path to progression and pay growth in as short as
+                    a 6 month timeframe</li>
+                <li>You will have direct interaction with clients around the world, which will allow you to quickly
+                    develop a portfolio of sales deals you have facilitated, and familiarity in a diverse set of
+                    industries</li>
+                <li>We will provide training and certification on the role of Sales Development Rep, and you will be
+                    paid your full time salary during the training</li>
+                <li>We will cover your internet costs when you work from home</li>
+                <li>You would be joining at the ground level of a brand new startup, working closely with the founders
+                    to establish best practices and to help grow the company.</li>
+            </ul>
+            <a class="button is-primary is-large" href="form.html">Apply Now</a>
+        </div>
+    </div>
 </body>
+
 </html>
