--- a/careers/index.html
+++ b/careers/index.html
@@ -38,25 +38,25 @@
     </div>
     <div class="columns is-centered">
         <div class="column is-three-quarters-desktop job-opening">
-            <h2 id="job-description" class="title"><strong>Sales Development Representative</strong></h2>
+            <h2 id="job-description" class="title"><strong>Business Development Representative</strong></h2>
             <h4 id="job-description" class="subtitle">3-month paid contract</h4>
             <h3 id="-who-we-are-"><strong>Who we are</strong></h3>
             <p>Hodi is a new startup offering Sales Development as a Service. We work with companies across the globe to
                 help them identify, research and communicate with potential customers. </p>
             <h3 id="-your-role-at-hodi-"><strong>Your role at Hodi</strong></h3>
-            <p>As a Sales Development Representative (SDR), you will be part of the team providing execution of the SDR
+            <p>As a Business Development Representative (BDR), you will be part of the team providing execution of the BDR
                 work for our clients. This involves internet research, email and social platform communication with
                 potential clients.</p>
-            <h3 id="-sdr-a-building-block-for-a-diverse-range-of-career-opportunities-"><strong>SDR - A building block
+            <h3 id="-bdr-a-building-block-for-a-diverse-range-of-career-opportunities-"><strong>BDR - A building block
                     for a diverse range of career opportunities</strong></h3>
-            <p>As a Sales Development Representative, you will develop skills and experience which can set you up for
-                many different career paths. Within sales, SDR experience is often the foundation for future progression
-                as an Account Executive, the role where you close the deals that are identified by SDRs. Experience in
+            <p>As a Business Development Representative, you will develop skills and experience which can set you up for
+                many different career paths. Within sales, BDR experience is often the foundation for future progression
+                as an Account Executive, the role where you close the deals that are identified by BDRs. Experience in
                 research and outreach within a specific industry will make you an asset to any growing company that
                 sells to similar clients. </p>
             <p>As Hodi grows, we hope to be able to offer many of these opportunities for advancement in-house. There
                 are also a diverse range of career opportunities outside of Hodi that will be open to you based on the
-                strong research, communication and skills you will have demonstrated in your role as an SDR.</p>
+                strong research, communication and skills you will have demonstrated in your role as an BDR.</p>
             <h3 id="-key-requirements-"><strong>Key requirements</strong></h3>
             <ul>
                 <li>Internet-savvy: We use a lot of tech tools to deliver our service, and you will need to be
@@ -64,18 +64,18 @@
                 <li>Excellent written communication: Hodi will be representing global brands and reaching out to
                     customers around the world. It is therefore very important that our reps have a high standard of
                     written English</li>
-                <li>Hard-working: As a full-time SDR, you will be handling communication with hundreds of clients and
+                <li>Hard-working: As a full-time BDR, you will be handling communication with hundreds of clients and
                     performing extensive internet research, every single day. Your success in your role depends on your
                     ability to execute these responsibilities at a high level of quality throughout the work week.</li>
                 <li>Resilient: Sales is not for the faint hearted! Every day, you will receive rejections from potential
-                    customers who do not want to hear back from you. As an SDR, you will need to be comfortable facing a
+                    customers who do not want to hear back from you. As an BDR, you will need to be comfortable facing a
                     &#39;No&#39; every day, and adaptable to learn and improve your process from every rejection you
                     receive.</li>
-                <li>University graduate: For Hodi to compete on a global stage, we require our SDRs to have an
+                <li>University graduate: For Hodi to compete on a global stage, we require our BDRs to have an
                     undergraduate degree in any field. You must have already graduated and received your certificate to
                     qualify for a role at Hodi.</li>
                 <li>Available for full time work, 9am-5pm on Monday to Friday</li>
-                <li>Our SDRs must be based in Nairobi, Kenya, and must have a laptop through which they can work.</li>
+                <li>Our BDRs must be based in Nairobi, Kenya, and must have a laptop through which they can work.</li>
             </ul>
             <h3 id="-what-we-will-do-for-you-"><strong>What we will do for you</strong></h3>
             <ul>
@@ -84,7 +84,7 @@
                 <li>You will have direct interaction with clients around the world, which will allow you to quickly
                     develop a portfolio of sales deals you have facilitated, and familiarity in a diverse set of
                     industries</li>
-                <li>We will provide training and certification on the role of Sales Development Rep, and you will be
+                <li>We will provide training and certification on the role of Business Development Rep, and you will be
                     paid your full time salary during the training</li>
                 <li>We will cover your internet costs when you work from home</li>
                 <li>You would be joining at the ground level of a brand new startup, working closely with the founders
