--- a/careers/form.html
+++ b/careers/form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Apply for SDR role at Hodi</title>
+    <title>Apply for BDR role at Hodi</title>
     <style>
 #logo_wrap {
 
